# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
brain_games/: .flake8  __init__.py  cli.py
brain_games/scripts/: __init__.py  brain_games.py
