[tool.poetry]
name = "kerodim_hexlet_code"
version = "0.2.2"
description = ""
authors = ["kerodim <turboboomer2000@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
